--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Vallerie Ines </title>
+    <title> Vallerie Ines </title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -195,8 +195,8 @@ s.setAttribute('data-timestamp', +new Date());
           <div class="row">
             <div class="footer-col col-md-4">
               <h3>Location</h3>
-              <p>3481 Melrose Place
-                <br>Beverly Hills, CA 90210</p>
+              <p>Philippines
+                <br>#27 Sandico Street, Baguio City</p>
             </div>
             <div class="footer-col col-md-4">
               <h3>Around the Web</h3>
