--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- Header -->
     <header class="masthead">
       <div class="container">
-        <img class="img-fluid" src="images.jpg" alt="">
+        <img class="img-fluid" src="vall.jpg" alt="">
         <div class="intro-text">
           <span class="name">Vallerie Ines</span>
           <hr class="star-light">
