--- a/index.html
+++ b/index.html
@@ -49,17 +49,11 @@
       </div>
     </nav>
 
-    <!-- Header -->
-    <header class="masthead">
-      <div class="container">
-         <img class="img-fluid" src="image.JPG" alt="" style="width:20%; height:10%; border-radius:30%">
-        <div class="intro-text">
-          <span class="name">Vallerie Ines</span>
-          <hr class="star-light">
-          <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
-        </div>
-      </div>
-    </header>
+    <!-- Header -->     <header class="masthead">       <div
+class="container">          <img class="img-fluid" src="image.JPG" alt=""
+style="width:20%; height:10%; border-radius:30%">         <div class="intro-
+text">           <span class="name">Vallerie Ines</span>           <hr class
+="star-light">           <span class="skills"> NEVER SETTLE FOR LESS</span>         </div>       </div>     </header>
 
     <!-- Portfolio Grid Section -->
     <section id="portfolio">
