--- a/index.html
+++ b/index.html
@@ -132,15 +132,12 @@ text">           <span class="name">Vallerie Ines</span>           <hr class
         <hr class="star-light">
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                 <p>Keep your dreams alive. Understand to achieve anything requires faith and belief in yourself, vision, hard work, determination, and dedication. Remember all things are possible for those who believe.</p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
-          </div>
-          <div class="col-lg-8 mx-auto text-center">
-            <a href="#" class="btn btn-lg btn-outline">
-              <i class="fa fa-download"></i>
-              Download Theme
+<p> -------------------------------------------------------------------------</p>
+    <p> Jeremiah 29:11
+"For I know the plans I have for you, declares the Lord, plans to prosper you and not to harm you, plans to give you hope and a future. "</p>
             </a>
           </div>
         </div>
@@ -191,6 +188,7 @@ s.setAttribute('data-timestamp', +new Date());
               <h3>Location</h3>
               <p>Philippines
                 <br>#27 Sandico Street, Baguio City</p>
+                <p>2600</p>
             </div>
             <div class="footer-col col-md-4">
               <h3>Around the Web</h3>
@@ -235,7 +233,7 @@ s.setAttribute('data-timestamp', +new Date());
         <div class="container">
           <div class="row">
             <div class="col-lg-12">
-              Copyright &copy; Your Website 2017
+              Copyright © Vallerie Ines
             </div>
           </div>
         </div>
@@ -266,9 +264,7 @@ s.setAttribute('data-timestamp', +new Date());
            <h2>Resume</h2>
                   <hr class="star-primary">
                   <img class="img-fluid img-centered" src="img/portfolio/cake.png" alt="">
-            
                     <a href="https://vallerieines.github.io/vall_resume/">RESUME</a>
-               
                   <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
                     Close</button>
