--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ text">           <span class="name">Vallerie Ines</span>           <hr class
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/cabin.png" alt="">
+              <img class="img-fluid" src="2.JPG" alt="">
             </a>
           </div>
           <div class="col-sm-4 portfolio-item">
@@ -78,7 +78,7 @@ text">           <span class="name">Vallerie Ines</span>           <hr class
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/cake.png" alt="">
+              <img class="img-fluid" src="1.JPG" alt="">
             </a>
           </div>
           <div class="col-sm-4 portfolio-item">
@@ -88,7 +88,7 @@ text">           <span class="name">Vallerie Ines</span>           <hr class
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/circus.png" alt="">
+              <img class="img-fluid" src="3.JPG" alt="">
             </a>
           </div>
           <div class="col-sm-4 portfolio-item">
@@ -98,7 +98,7 @@ text">           <span class="name">Vallerie Ines</span>           <hr class
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/game.png" alt="">
+              <img class="img-fluid" src="6.JPG" alt="">
             </a>
           </div>
           <div class="col-sm-4 portfolio-item">
@@ -108,7 +108,7 @@ text">           <span class="name">Vallerie Ines</span>           <hr class
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/safe.png" alt="">
+              <img class="img-fluid" src="4.JPG" alt="">
             </a>
           </div>
           <div class="col-sm-4 portfolio-item">
@@ -118,7 +118,7 @@ text">           <span class="name">Vallerie Ines</span>           <hr class
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/submarine.png" alt="">
+              <img class="img-fluid" src="5.JPG" alt="">
             </a>
           </div>
         </div>
