--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ s.setAttribute('data-timestamp', +new Date());
 
            <h2>Resume</h2>
                   <hr class="star-primary">
-                  <img class="img-fluid img-centered" src="img/portfolio/cake.png" alt="">
+                  <img class="img-fluid img-centered" src="2.JPG" alt="">
                     <a href="https://vallerieines.github.io/vall_resume/">RESUME</a>
                   <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
