--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- Header -->    
      <header class="masthead">   
     <div class="container">    
-   <img src="image.jpg" class="img-thumbnail" alt="Cinque Terre" width="304" height="236">    
+   <img src="image.JPG" class="img-thumbnail" alt="Cinque Terre" width="304" height="236">    
 <div class="intro-text">         
  <span class="name">Vallerie Ines</span>      
  <hr class="star-light">  
@@ -295,8 +295,7 @@ s.setAttribute('data-timestamp', +new Date());
                   <hr class="star-primary">
                   <img class="img-fluid img-centered" src="7.jpg" alt="">
                   <a href="https://github.com/AEBG/netcafe.github.io.git/">Netcafé</a>
-              
-                 
+               <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
                     Close</button>
                 </div>
