--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ s.setAttribute('data-timestamp', +new Date());
                   <h2>Netcafé</h2>
                   <hr class="star-primary">
                   <img class="img-fluid img-centered" src="7.jpg" alt="">
-                  <a href="https://github.com/AEBG/netcafe.github.io.git/">Netcafé</a>
+                  <a href="https://aebg.github.io/netcafe.github.io/">Netcafé</a>
                <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
                     Close</button>
